css/default.css
/* ... */
.Liberty .content-wrapper .liberty-sidebar .live-recent-wrapper .live-recent .live-recent-footer {
	background-color: #f5f8fa;
	border: 1px solid #e1e8ed;
	border-top: 0;
	border-bottom-left-radius: 0.35rem;
	border-bottom-right-radius: 0.35rem;
	text-align: right;
	padding: 0.4rem 0.6rem;
}

.Liberty .content-wrapper .liberty-sidebar .live-recent-wrapper .live-recent .live-recent-footer .label {
	padding: 0.4rem;
	font-size: 0.8rem;
	font-weight: 400;
}

.Liberty .content-wrapper .liberty-sidebar .live-recent-wrapper .live-recent .live-recent-footer .label:hover {
	transition: 0.3s;
}

.Liberty .content-wrapper .liberty-sidebar .right-ads {
	position: absolute;
	top: 25.73rem;
	width: 15rem;
}
/* Right menu End */

/* Content */
.Liberty .content-wrapper {
	margin-top: 3.33rem;
	z-index: -1;
}

.Liberty .content-wrapper .liberty-content {
	margin-right: 16rem;
	padding: 0;
	padding-bottom: 1rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header {
	border: 1px solid #e1e8ed;
	border-radius: 0.35rem 0.35rem 0 0;
	background-color: #f5f8fa;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .liberty-notice {
	margin: 1rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .liberty-notice ul {
	list-style-image: none;
	list-style-type: none;
	text-align: center;
	line-height: 1.8rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .content-tools {
	float: right;
	padding-right: 1rem;
	padding-top: 1rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .content-tools .tools-btn {
	font-size: 0.9rem;
	padding: 0.4rem 0.8rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .content-tools .dropdown-toggle {
	padding: 0.4rem 0.3rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .content-tools .tools-btn:hover,
.Liberty .content-wrapper .liberty-content .liberty-content-header .content-tools .tools-btn:focus,
.Liberty .content-wrapper .liberty-content .liberty-content-header .content-tools .tools-btn:active {
	color: #fff;
	transition: 0.3s;
	outline: 0;
	border-color: #e1e8ed;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .content-tools .dropdown-menu {
	top: 92%;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .title {
	padding: 1rem;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .contentSub {
	margin-top: -0.5rem;
	padding: 1rem;
	padding-top: 0;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .title > h1 {
	color: #000;
	font-weight: bold;
}

.Liberty .content-wrapper .liberty-content .liberty-content-header .header-ads {
	margin: 1rem;
	margin-bottom: 0;
}

.Liberty .content-wrapper .liberty-content .liberty-content-main {
	border-left: 1px solid #e1e8ed;
	border-right: 1px solid #e1e8ed;
	background-color: #fff;
	padding: 1rem;
	overflow: hidden;
	line-height: 1.6rem;
}
/* Content End */

/* Footer */
.Liberty .content-wrapper .liberty-footer {
	border: 1px solid #e1e8ed;
	border-radius: 0 0 0.35rem 0.35rem;
	background-color: #f5f8fa;
	padding: 1rem;
}

.Liberty .content-wrapper .liberty-footer ul {
	list-style-type: none;
	list-style-image: none;
}

.Liberty .content-wrapper .liberty-footer ul {
	margin-bottom: 0.8rem;
	display: inline-block;
	width: 100%;
}

.Liberty .content-wrapper .liberty-footer .footer-places li {
	text-align: left;
	float: left;
	margin-right: 0.8rem;
}

.Liberty .content-wrapper .liberty-footer .footer-icons {
	margin-bottom: 0;
}

.Liberty .content-wrapper .liberty-footer .footer-icons li {
	margin-right: 0.8rem;
	float: left;
}
/* Footer End */

/* Login modal */
.Liberty .login-modal .modal-sm {
	width: 25rem;
}

.Liberty .login-modal .modal-header {
	padding: 0.7rem;
}

.Liberty .login-modal .modal-title {
	text-align: center;
	padding-left: 1.5rem;
}

.Liberty .login-modal .alert {
	padding: 0.8rem;
	margin-bottom: 0.8rem;
}

.Liberty .login-modal .alert-hidden {
	display: none;
}

.Liberty .login-modal .form-control {
	margin-bottom: 0.8rem;
}

.Liberty .login-modal .modal-checkbox:not(#noop) {
	position: relative;
	display: table;
}

.Liberty .login-modal .modal-checkbox {
	vertical-align: middle;
	margin-bottom: 0.7rem;
}

.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"] {
	opacity: 0;
	width: 2em;
	height: 2em;
	max-width: none;
	margin: 0;
	display: table-cell;
}

.Liberty .login-modal .modal-checkbox:not(#noop) * {
	vertical-align: middle;
	font: inherit;
}

.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"] + label {
	padding-left: 0.4em;
	display: table-cell;
}

.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"] + label::before {
	-webkit-transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
	-moz-transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
	-o-transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
	transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
	content: "";
	cursor: pointer;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	position: absolute;
	left: 0;
	border-radius: 2px;
	width: 2em;
	height: 2em;
	line-height: 2em;
	border: 1px solid #777;
	top: 50%;
	margin-top: -1em;
}

.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"] + label:hover::before {
	border: 3px solid #777;
}

.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"]:checked + label::before {
	border: 3px solid #777;
	background-image: linear-gradient(transparent, transparent),
		url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%3E%3Cpath%20d%3D%22M4%2012l5%205L20%205%22%20stroke%3D%22%2300B78C%22%20stroke-width%3D%223%22%20fill%3D%22none%22%2F%3E%3C%2Fsvg%3E%0A);
}

.Liberty .login-modal .btn {
	margin-bottom: 0.8rem;
}
/* ... */

